# branham-sermons

./: README.md  docker-compose.yml  parse.py  pyproject.toml
data/: sermons.json
