[tool.poetry]
name = "branham-sermons"
version = "0.1.0"
description = ""
authors = ["Gabriel Bossardi <contato@gabrielbossardi.com.br>"]
readme = "README.md"
packages = [{include = "branham_sermons"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
sqlalchemy = "^2.0.29"
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
